methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: type mismatch;
 found   : (java.awt.Color, java.awt.Color, java.awt.Color, java.awt.Color)
 required: Array[java.awt.Color]
  var L:Array[Color]=(Color.yellow,Color.red,Color.blue,Color.green) 
                     ^